[package]
name = "chainlink-tests"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.client]
path = "client"

[dependencies.oracle]
path = "oracle"

[dependencies.aggregator]
path = "aggregator"

[dependencies.exchange]
path = "exchange"

[dependencies.price-aggregator]
path = "price-aggregator"

[dependencies.dharitri-wasm]
version = "0.10.2"

[dev-dependencies.dharitri-wasm-debug]
version = "0.10.2"

[dev-dependencies.dharitri-wasm-modules]
version = "0.10.2"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"