[package]
name = "module-test"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["dharitri-wasm-node"]

[dependencies.dharitri-wasm]
version = "0.20.1"
features = ["derive"]

[dependencies.dharitri-wasm-node]
version = "0.20.1"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.20.1"

[dependencies.price-aggregator-proxy]
version = "0.0.0"
path = "../proxy-modules/price-aggregator-proxy"
