[package]
name = "module-test"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "0.9.8"

[dependencies.dharitri-wasm-derive]
version = "0.9.8"

[dev-dependencies.dharitri-wasm-debug]
version = "0.9.8"

[dependencies.price-aggregator-proxy]
version = "0.0.0"
path = "../proxy-modules/price-aggregator-proxy"
