[package]
name = "oracle"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.aggregator]
path = "../aggregator"
default-features = false

[dependencies.dharitri-wasm]
version = "0.10.2"

[dev-dependencies.dharitri-wasm-debug]
version = "0.10.2"
