[package]
name = "price-aggregator"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-wasm]
version = "0.10.2"

[dependencies.dharitri-wasm-modules]
version = "0.10.2"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }

[dev-dependencies.dharitri-wasm-debug]
version = "0.10.2"
