[package]
name = "module-test-wasm"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.module-test]
path = ".."

[dependencies.dharitri-wasm-node]
version = "0.10.2"

[dependencies.dharitri-wasm-output]
version = "0.20.1"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
