[package]
name = "price-aggregator-proxy"
version = "0.0.0"
authors = [ "",]
edition = "2018"

[features]
wasm-output-mode = ["dharitri-wasm-node"]

[dependencies.dharitri-wasm]
version = "0.6.9"
features = ["derive"]

[dependencies.dharitri-wasm-node]
version = "0.6.9"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.6.9"
